# py-logging-plus

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
logging_plus/: __init__.py
tests/: context.py  logTest.py
tests/logTestMod/: __init__.py
